# GO-transit-display

./: .replit  CONTRIBUTING.md  GRAPHIC_CHARTER.md  alert_scraper.py  analysis_results.md  app.py  go_scraper.py  gtfs_parser.py  main.py  models.py  pyproject.toml  replit.nix  scraper.py  scraper_utils.py  stop_scraper.py
.github/: PULL_REQUEST_TEMPLATE.md
attached_assets/: CONTRIBUTING.md  DOCUMENTATION (1).md  DOCUMENTATION.html  DOCUMENTATION.md  INSTALLATION.md  LICENSE  PROJECT_STRUCTURE.md  Pasted-Clean-up-the-CSS-code-and-remove-old-unnecessary-changes-and-create-a-clean-code-1-display-board-1742278750219.txt  Pasted-Do-not-touch-the-column-headers-only-correct-the-column-content-and-the-display-in-the-columns-th-1742149106068.txt  Pasted-Here-is-the-code-for-the-page-Find-out-how-it-displays-them-and-adjust-the-scraper-div-style-f-1742277115073.txt  Pasted-I-would-like-to-know-why-scraper-takes-so-much-data-it-recovers-spurious-information-look-at-the-p-1742274740481.txt  Pasted-Try-correcting-the-footer-position-The-footer-is-positioned-partially-outside-the-window-too-far-d-1742196650178.txt  Pasted-You-told-me-that-But-your-change-didn-t-work-display-These-changes-will-Filter-the-stops-to-sho-1742150135670.txt  Pasted-import-requests-from-bs4-import-BeautifulSoup-import-tweepy-import-json-Twitter-API-credentials--1742198428401.txt  Pasted-pour-stop-scraper-py-ajoute-c-est-lien-real-time-data-https-www-gotracker-ca-gotracker-web-http-1742151285904.txt  README.MD  README.md  UPDATE.md  create_archive.py  pyproject.toml  routes.txt  stops.txt
(+41 files in other folders)
