[tool.poetry]
name = "go-transit-display"
version = "0.1.0"
description = "Real-time GO Transit display board application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
email-validator = "^2.2.0"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
